--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
 </div>
 <div id="copyright">
 	<p>
-		© 2017-2023 Carlmont Robotics. All Rights Reserved.
+		© 2017-2023 Carlmont High School Robotics Team. All Rights Reserved.
 	</p>
 </div>
 </div>
